# nrf5340_earbuds

./: .gitignore  CMakeLists.txt  LICENSE  README.rst
src/: main.c
src/audio/: audio_system.c
src/modules/: CMakeLists.txt
src/user_dsp/: CMakeLists.txt  user_dsp.c  user_dsp.h
src/user_dsp/user_dsp_sdk/: adi_lark_adc.c  adi_lark_asrc.c  adi_lark_clk.c  adi_lark_cp.c  adi_lark_dac.c  adi_lark_device.c  adi_lark_dma.c  adi_lark_dmic.c  adi_lark_ds.c  adi_lark_eq.c  adi_lark_fdec.c  adi_lark_fdsp.c  adi_lark_ffsram.c  adi_lark_fint.c  adi_lark_gpt.c  adi_lark_hal.c  adi_lark_hpamp.c  adi_lark_int.c  adi_lark_mp.c  adi_lark_pdm.c  adi_lark_pga.c  adi_lark_pmu.c  adi_lark_qspi.c  adi_lark_sap.c  adi_lark_tdsp.c  adi_lark_uart.c  adi_lark_wdt.c
src/user_dsp/user_dsp_sdk/includes/: adi_lark.h  adi_lark_bf_data_sync.h  adi_lark_bf_dma.h  adi_lark_bf_fifo_sram.h  adi_lark_bf_gpt.h  adi_lark_bf_lark_yoda.h  adi_lark_bf_qspi.h  adi_lark_bf_soc.h  adi_lark_bf_uart.h  adi_lark_bf_wdt.h  adi_lark_config.h  adi_lark_lite_bf_lark_lite_yoda.h
